--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <p class="text1">This is not a real online service! You know you need something like this in your line to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
                 <p class="text2">You <em>know</em> you want to.</p>
             </div>
-            <form action="" class="signup-form">
+            <form action="">
+                <div class="signup-form">
                 <h1>Let's do this!</h1>
                 <div class="name">
                     <div class="name1">
@@ -39,11 +40,11 @@
                 <div class="contact-info">
                     <div class="email">
                         <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" placeholder='joe@example.com'>
                     </div>
                     <div class="phone">
                         <label for="phone-number">PHONE NUMBER</label>
-                        <input type="number" name="phone-number" id="phone-number">
+                        <input type="tel" name="phone-number" id="phone-number">
                     </div>
                 </div>
                 <div class="password-info">
@@ -56,9 +57,9 @@
                         <input type="password" name="confirm-password" id="confirm-password">
                     </div>
                 </div>
-
-
-
+            </div>
+            <button>Create Account</button>
+            <p class="account">Already have an account? <strong><a href> Log in</a></strong></p>
 
             </form>
             
