--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                 <div class="name">
                     <div class="name1">
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" name="first-name" id="first-name">
+                        <input type="text" name="first-name" id="first-name" required>
                     </div>
                     <div class="name2">
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" name="last-name" id="last-name">
+                        <input type="text" name="last-name" id="last-name" required>
                     </div>
                 </div>
                 <div class="contact-info">
                     <div class="email">
                         <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email" placeholder='joe@example.com'>
+                        <input type="email" name="email" id="email" placeholder='joe@example.com' required>
                     </div>
                     <div class="phone">
                         <label for="phone-number">PHONE NUMBER</label>
@@ -50,11 +50,11 @@
                 <div class="password-info">
                     <div class="password">
                         <label for="password">PASSWORD</label>
-                        <input type="password" name="password" id="password">
+                        <input type="password" name="password" id="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 6 or more characters">
                     </div>
                     <div class="confirm-password">
                         <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input type="password" name="confirm-password" id="confirm-password">
+                        <input type="password" name="confirm-password" id="confirm-password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}">
                     </div>
                 </div>
             </div>
