Add responsive design

--- a/index.html
+++ b/index.html
@@ -58,16 +58,11 @@
                     </div>
                 </div>
             </div>
-            <button>Create Account</button>
-            <p class="account">Already have an account? <strong><a href> Log in</a></strong></p>
-
-            </form>
-            
-
-
-
-
-
+            <div class="login">
+                <button>Create Account</button>
+                <p class="account">Already have an account? <strong><a href> Log in</a></strong></p>
+            </div>
+        </form>
         </div>
     </div>
     
